# CalculatorPrjGuiAndBackend

./: .gitignore  Programs.code-workspace  README.md
CalculatorBackEnd/src/: CMakeLists.txt
CalculatorBackEnd/src/production/: CalcLogic.cpp
CalculatorBackEnd/src/production/include/: CalcLogic.h
CalculatorBackEnd/src/tests/: TestCalcLogic.cpp
StandardCalcProj/StandardCalcGuiPrj/: CMakeLists.txt  main.cpp  standardCalcGui.cpp  standardCalcGui.h
